# jap_learn

./: Cargo.toml
sql/: card_set.sql  card_stats.sql  settings.sql  word_group.sql  words.sql
src/: dictionary.rs  dictionary_test.rs  lang.rs  main.rs  repetition.rs  repetitions.rs  selector.rs  sync.rs  word.rs
src/data_provider/: card_sets.rs  mod.rs  settings.rs  sqlite.rs  words.rs
