[package]
name = "jap_learn"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"]}
rand = "0.10.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rhai = "1.24.0"
chrono = "0.4.44"
rusqlite = { version = "0.39.0", features = ["chrono"] }
reqwest = { version = "0", features = ["json", "stream", "multipart"] }
rodio = "0.22.2"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
rayon = "1.12.0"
hex = "0.4.3"
hex-literal = "1.1.0"
zstd = "0.13.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "split_bench"  # Имя файла в benches/ без расширения
harness = false       # Отключаем стандартный тестовый раннер
